# netlist-vis

./: LICENSE  README.md  demo-data.py  docker-compose.yml
backend/: pyproject.toml
backend/src/netlist_vis_backend/: database.py  main.py  models.py  rules.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: routes.ts
frontend/app/editor/: Editor.tsx  EditorWindow.tsx  MessagePane.tsx  Sidebar.tsx  butterworth.json  editor.css  netlist.json  theme.ts  types.d.ts
frontend/app/editor/circuit/: component.ts  ic.ts  index.ts  wire.ts
frontend/app/lib/: types.d.ts
frontend/app/routes/: editor.tsx  home.tsx
netlist-vis-backend/: Dockerfile  README.md  pyproject.toml
netlist-vis-backend/src/netlist_vis_backend/: database.py  main.py  models.py
netlist-vis-backend/src/netlist_vis_backend/routes/: netlists.py  users.py
